--- a/magpie.html
+++ b/magpie.html
@@ -49,7 +49,7 @@
         <p>This page is dedicated to my cat Magpie. She is around 14 years old and lives happily in my parents' house. Below is a picture of her; hover on it to "pet" her.</p>
         
         <p>
-        <img id="magpie_img" src="img/magpie.png" alt="an image of a tortoiseshell cat facing the viewer, partially curled into a ball with one paw sticking out forwards with outstretched toes. "></p>
+        <img id="magpie_img" src="img/Magpie.png" alt="an image of a tortoiseshell cat facing the viewer, partially curled into a ball with one paw sticking out forwards with outstretched toes. "></p>
         
         <p><i>Top 5 Magpie spots around the house:</i></p>
 <!--        see if you can make the list descending order-->
