--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     
     </style>
  
-<!--Ok apologies in advance because this website is a geocities kind of ugly, but it's what I could manage OTL-->
+<!--Ok apologies in advance because this website is a geocities kind of ugly, but it's what I could manage OTL
+	
+This was designed on a laptop screen! While I tried to account for scaling issues, please zoom in if something seems broken.		
+-->
 
 <!--    Colors
 #701c7c
