--- a/magpie.html
+++ b/magpie.html
@@ -9,7 +9,7 @@
     <style>
         body {
             background-color:#ac7078;
-            background-image:url("img/bg_Magpie.png");
+            background-image:url("img/bg_magpie.png");
             background-repeat:repeat, space;
         } 
     
