--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ todo:
             <th>Date</th>
             <th>Notes</th>
         </tr>
+	     <tr>
+            <td>10/23/24</td>
+            <td>Tweaked some minor issues that arose when uploading to github.</td>
+        </tr>
           <tr>
             <td>10/22/24</td>
             <td>Finished up basically all of my work on the website! Not entirely happy with it but it's ready for submission. Checked it with a validator and uploaded the files to gitpages.</td>
